--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "test:ui": "vitest --ui",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "openai": "^5.9.0",
@@ -32,7 +30,6 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
