--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
       run: npm run build
       env:
         VITE_OPENROUTER_API_KEY: ${{ secrets.VITE_OPENROUTER_API_KEY }}
-        VITE_OPENROUTER_MODEL: mistralai/mistral-small-3.2-24b-instruct:free
+        VITE_OPENROUTER_MODEL: ${{ secrets.VITE_OPENROUTER_MODEL || 'qwen/qwen3-235b-a22b:free' }}
         VITE_OPENROUTER_BASE_URL: https://openrouter.ai/api/v1
 
     - name: Setup Pages
